--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Healthpilot
+title: Healthpilot Android
 email: your-email@example.com
 description: Lemon Healthcare Inc.
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -30,7 +30,8 @@ github_username:  jekyll
 theme: minima
 plugins:
   - jekyll-feed
-
+minima:
+  date_format: "%m월%d일  %H시"
 site:
   description: Lemon Healthcare Inc.
 
